unpackaged/main/default/objects/litify_docs__File_Link_File_Info_Junction__c/litify_docs__File_Link_File_Info_Junction__c.object-meta.xml
<CustomObject>
    <description>Defines which files are contained in which file links.</description>
    <label>File Link File Info Junction</label>
    <nameField>
        <displayFormat>FLFIJ-{0000}</displayFormat>
        <label>File Link File Info Junction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Link File Info Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>