unpackaged/main/default/objects/litify_docs__File_Link_File_Info_Junction__c/fields/litify_docs__File_Info__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__File_Info__c</fullName>
    <label>File Info</label>
    <referenceTo>litify_docs__File_Info__c</referenceTo>
    <relationshipLabel>File Link File Info Junctions</relationshipLabel>
    <relationshipName>File_Link_File_Info_Junctions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>