unpackaged/main/default/objects/litify_docs__File_Link_File_Info_Junction__c/fields/litify_docs__File_Link__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__File_Link__c</fullName>
    <label>File Link</label>
    <referenceTo>litify_docs__File_Link__c</referenceTo>
    <relationshipLabel>File Link File Info Junctions</relationshipLabel>
    <relationshipName>File_Link_File_Info_Junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>